# altdrag

./: CMakeLists.txt  hooks.c
config/: window.rc
include/: altdrag.rc  hookwindows_x64.rc
